# WarhornLogAnalizer

./: .gitignore  CMakeLists.txt  README.md
src/cpp_code/: main.cpp  objectmanager.cpp  objectmanager.h
src/cpp_code/custom_qml_elements/: list_c.cpp  list_c.h  scrollbar_c.cpp  scrollbar_c.h  scrollview_c.cpp  scrollview_c.h
src/cpp_code/files/: filemanager.cpp  filemanager.h
src/cpp_code/helpers/: scopedtimer.cpp  scopedtimer.h
src/cpp_code/log/: loganalizer.cpp  loganalizer.h  logentry.cpp  logentry.h  logmanager.cpp  logmanager.h  logtype.cpp  logtype.h
src/cpp_code/log/log_groups/: gameplaylogs.cpp  gameplaylogs.h  logbase.cpp  logbase.h
src/cpp_code/ui_managers/: descriptionwindowmanager.cpp  descriptionwindowmanager.h
src/resources/: resources.qrc
src/view/: main.qml  qml.qrc
src/view/custom_components/: LogEntry.qml  LogGroup.qml  LogList.qml  ScrollBar_C.qml
src/view/pages/: DescriptionPage.qml  DescriptionWindow.qml  LogExplorer.qml  ManageWindow.qml
src/view/scripts/: Colors.js  Fonts.js
